# inotify_folder_change_detection

./: CMakeLists.txt  README.md
src/: folder_watcher.cpp
